# masters-thesis

./: .gitignore  compare_inference_time.ipynb  compare_inference_time_distilled_lottery_tickets.ipynb  create_ck+_dataset.py  data_analysis.py  get_best_model.ipynb  model_inf.ipynb  pyproject.toml  quantization.ipynb  setup.sh  xai_using_lime.ipynb
model_training_ck/: MobileNetV3.ipynb  ViT.ipynb  cnn.ipynb  data_preparation.py  distilled_lottery_ticket_hypothesys.ipynb  knowledge_distillation.ipynb  lottery_ticket_hypothesys-Copy1.ipynb  lottery_ticket_hypothesys.ipynb  model_training.ipynb
model_training_fer/: MobileNetV3.ipynb  ViT.ipynb  cnn.ipynb  data_preparation.py  distilled_lottery_ticket_hypothesys.ipynb  knowledge_distillation.ipynb  lottery_ticket_hypothesys-Copy1.ipynb  model_hyperparameters.py  model_training.ipynb  trainer.py
