[tool.poetry]
name = "masters-thesis"
version = "0.1.0"
description = ""
authors = ["Diogo Alves"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
matplotlib = "^3.8.2"
numpy = "^1.26.3"
plotly = "^5.18.0"
scikit-learn = "^1.4.0"
opencv-python = "^4.10.0.82"
seaborn = "^0.13.2"
xgboost = "^2.0.3"
transformers = "^4.41.2"
torch = "^2.4.0"
torchvision = "^0.19.0"
torchsummary = "^1.5.1"
nbformat = "^5.10.4"
lime = "^0.2.0.1"
ipykernel = "^6.29.5"
boto3 = "^1.35.8"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
